--- a/HopitalBim/Config/Style.css
+++ b/HopitalBim/Config/Style.css
@@ -4,7 +4,7 @@ body {
     background-image: url(../Images/background1.jpg);
     font-family: "Josefin Slab", serif, Courier New, Verdana;
     color: #87CEFA; 
-    }
+}
 
 #entete { 
     margin: 0 0 0 0 ;
@@ -13,68 +13,108 @@ body {
     font-size: 40px;
     text-shadow: 2px 2px 5px black;
     color : white;
-    }
+}
 
 .accroche{
     text-align: center;
     font-size: 20px;
     color:white;
     padding: 0 0 10px 0;
-    }
+}
 
 #menu{
-    text-align: center;
+    text-align: left;
     font-size: 25px;
     padding: 10px;
     border-bottom: 1px solid #87CEFA;
-    }
+}
 
-img{
-    display:block;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 60%;   
-    }
+input {
+    border:none;
+    font-family: "Josefin Slab", serif;
+    font-size: 16px;
+    line-height: 1.5em;
+    padding: 0;  
+}
 
-.card{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    border-radius: 10px;
-    background-color: white;
-    }
+form header {
+  background-color: #262626;
+  padding: 5px 10px;
+  color: white;
+  font-size: 1.2em;
+  border-radius: 5px 5px 0 0;
+  margin-bottom: 5px;
+  text-align: center;
+}
 
-.Authentification{
-    padding: 2px 10px;
-    background-color: red;
-    }
+#login {
+  margin: 50px auto;
+  width: 320px;
+}
 
-#login-form {
-    background-color:white;
-    margin-right: 20%;
-    margin-left: 20%;
-    }
+#login form{
+  margin: auto;
+  padding: 22px 22px 22px 22px;
+  width: 100%;
+  border-radius: 5px;
+  background-color: #262626;
+  border-top: 3px solid white;
+  border-bottom: 3px solid white;
+}
 
+#login form span {
+  background-color: #363b41;
+  border-radius: 3px 0px 0px 3px;
+  border-right: 3px solid #434a52;
+  color: #606468;
+  display: block;
+  float: left;
+  line-height: 70px;
+  text-align: center;
+  width: 50px;
+  height: 50px;
+}
 
-/*.Authentification {
-    display: inline-block;
-    width : 170px;
-    padding: 20px;
-    margin: auto;
-    background-color: black;
-    border-left: 1px solid #ccc; 
-    border-bottom: 1px solid #ccc;
-    border-top-right-radius: 15px;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    }
+#login form input[type="text"] {
+  background-color: #3b4148;
+  border-radius: 0px 3px 3px 0px;
+  color: #a9a9a9;
+  margin-bottom: 1em;
+  padding: 0 16px;
+  width: 235px;
+  height: 50px;
+}
 
-.formuAccueil:hover{
-    background-color: #BDBDBD;
-    color: purple;
-    }
+#login form input[type="password"] {
+  background-color: #3b4148;
+  border-radius: 0px 3px 3px 0px;
+  color: #a9a9a9;
+  margin-bottom: 1em;
+  padding: 0 16px;
+  width: 235px;
+  height: 50px;
+}
 
-*/
+#login form button[type="submit"] {
+  font-family: "Josefin Slab", serif, Courier New, Verdana;
+  font-size: 1.2em;
+  background: #176780;
+  border: 0;
+  width: 100%;
+  height: 40px;
+  border-radius: 3px;
+  color: white;
+  cursor: pointer;
+}
+
+#footer {
+    margin : 10px;
+    border-top: 1px solid #87CEFA;
+    bottom:0;
+    left:0;
+    right:0;
+    position: absolute;
+}
 
 /* --- MENU PAGES ---  */
 .navbar {
