--- a/HopitalBim/Config/Style.css
+++ b/HopitalBim/Config/Style.css
@@ -1,9 +1,17 @@
 /* PAGE ACCUEIL */
 
-body {
+body {                        /* Tout le code html */ 
     background-image: url(../Images/background1.jpg);
     font-family: "Josefin Slab", serif, Courier New, Verdana;
-    color: #87CEFA; 
+    color: black; 
+    margin:0;
+    height : 100%;
+    text-align: justify;
+}
+
+#page {
+    min-height: 100%;
+    position: relative;
 }
 
 #entete { 
@@ -36,7 +44,7 @@ input {
     font-family: "Josefin Slab", serif;
     font-size: 16px;
     line-height: 1.5em;
-    padding: 0;  
+    padding: 0; 
 }
 
 form header {
@@ -111,40 +119,50 @@ form header {
 }
 
 #footer {
-    margin : 15px;
+  clear:both;
     border-top: 1px solid #87CEFA;
     bottom:0;
     left:0;
     right:0;
-    position: absolute;
+    position: fixed; /*absolute*/
     color: white;
     text-align: center;
+    height: 40px;
+    padding-top: 10px;
 }
 
 /* --- MENU PAGES ---  */
-.navbar {
-    overflow: hidden; /* visible | hidden */
+.navbar {                             /* Div barre de navigation */
+    overflow: hidden;                 /* visible | hidden */
     background-color: #262626; 
-    font-family: "Josefin Slab", serif; /* Arial */
+    font-family: "Josefin Slab", serif;
 }
 
-.navbar a {
+.navbar a {                 /* Pr Rdv, Planning : ceux qui n'ont pas de ss classes */
     float: left;
     font-size: 18px;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 16px;     /* 14px 16px */
     text-decoration: none;
 }
 
-.dropdown {
+.navbar a[name="Déco"]{
+  display: block;
+  padding: 3px 0 0 3px;
+  float:right;
+  max-width: 100px;
+  line-height: 15px;
+}
+
+.dropdown {                 /* Pr les 4 Div coulissants : Patient, Services, Compte User, Vérif */
     float: left;
     overflow: hidden;
 }
 
-.dropdown .dropbtn {
-    font-family: "Josefin Slab", serif; /* Arial */
-    font-size: 18px;    
+.dropdown .dropbtn {       /* Pour les 4 boutons coulissants */
+    font-family: "Josefin Slab", serif;
+    font-size: 18px; 
     border: none;
     outline: none;
     color: white;
@@ -153,7 +171,9 @@ form header {
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: #e6e6e6; /* ici */
+    color:black;
+    border-radius: 0;
 }
 
 .dropdown-content {
@@ -185,6 +205,7 @@ form header {
 /* Page Principale -- Bienvenue -- */        /*FINIR*/
 
 #PagePrincipale{
-  background-color: white;
-  width: 100%;
+  padding : 20px;
+  background-color: #e6e6e6;
+  height: 100%
 }
