--- a/HopitalBim/Config/Style.css
+++ b/HopitalBim/Config/Style.css
@@ -37,6 +37,11 @@ input {
     font-size: 16px;
     line-height: 1.5em;
     padding: 0;  
+    -webkit-appearance:none;
+}
+
+after{
+    clear: both;
 }
 
 form header {
@@ -188,3 +193,4 @@ form header {
   background-color: white;
   width: 100%;
 }
+
