--- a/HopitalBim/Config/Style.css
+++ b/HopitalBim/Config/Style.css
@@ -56,8 +56,7 @@ input {
     font-family: "Josefin Slab", serif;
     font-size: 16px;
     line-height: 1.5em;
-    padding: 0;  
-    -webkit-appearance:none;
+    padding: 0; 
 }
 
 after{
@@ -136,7 +135,7 @@ form header {
 }
 
 #footer {
-    clear: both;
+    margin : 15px;
     border-top: 1px solid #87CEFA;
     bottom:0;
     left:0;
@@ -188,9 +187,7 @@ form header {
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: #e6e6e6; 
-    color:black;
-    border-radius: 0;
+    background-color: red;
 }
 
 .dropdown-content {
