--- a/HopitalBim/Config/Style.css
+++ b/HopitalBim/Config/Style.css
@@ -135,25 +135,8 @@ form header {
   cursor: pointer;
 }
 
-#footer {
-    margin : 0px;
-    border-top: 1px solid #87CEFA;
-  /*  bottom: 0; */
-    left:0;
-    right:0;
-    color: white;
-    text-align: center;
-    height: 35px;
-    padding-top: 15px;
-    background-color: #17202A;
-}
-
-#footer a:link {
-  color : white;
-}
-
-#footer a:hover {
-    color: #87CEFA;
+#error {
+  color : red;
 }
 
 /*                     */
@@ -345,3 +328,23 @@ h6 {
 /*                 */
 /*                 */
 
+#footer {
+    margin : 0px;
+    border-top: 1px solid #87CEFA;
+  /*  bottom: 0; */
+    left:0;
+    right:0;
+    color: white;
+    text-align: center;
+    height: 35px;
+    padding-top: 15px;
+    background-color: #17202A;
+}
+
+#footer a:link {
+  color : white;
+}
+
+#footer a:hover {
+    color: #87CEFA;
+}
