--- a/HopitalBim/Config/Style.css
+++ b/HopitalBim/Config/Style.css
@@ -453,7 +453,7 @@ caption {
   margin-bottom: 8px;
 }
 
-table {
+#synthese {
   border: medium solid #000000; 
   background-color: white;
   border-collapse: collapse;
